feat: 코인 전체 보유량 조회